--- a/gap-example/src/components/Game/GameBoard.css
+++ b/gap-example/src/components/Game/GameBoard.css
@@ -32,3 +32,29 @@
   border-bottom: 0;
   border-top: 0;
 }
+
+.GamePiece {
+  font-size: 3em;
+  padding: 10px;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.3);
+  
+}
+.GamePiece > div {
+  transition: opacity 0.5s;
+  opacity: 0.5;
+}
+.GamePiece.selected > div {
+  opacity: 1;
+}
+.GamePiece.O {
+  color: darkblue ;
+}
+.GamePiece.X {
+  color: darkred;
+}
