--- a/gap-example/src/components/Game/GameBoard.css
+++ b/gap-example/src/components/Game/GameBoard.css
@@ -6,13 +6,14 @@
   padding: 20px;
   flex-wrap: wrap;
   background-color: rgb(233, 197, 126);
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
 }
 
 .GameBoard > div.GamePiece {
   width: calc(33% - 20px);
   height: 120px;
-  border: 3px solid #222;
+  border: 2px outset #222;
 }
 
 .GameBoard > div.GamePiece:nth-child(n+1) {
