--- a/gap-example/src/App.css
+++ b/gap-example/src/App.css
@@ -6,35 +6,21 @@
   min-height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+h1, h2 {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  font-size: 54px;
+  line-height: 1em;
+  margin:0;
+  text-shadow: 0px 0px 15px rgba(155, 71, 71, 0.95);
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  font-size: 36px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .buttons {
   display: flex;
   justify-content: space-between;
@@ -59,9 +45,7 @@ button:hover {
 }
 button.primary {
   background-color: rgb(128, 32, 32);
-  
   color: white;
- 
 }
 
 button.secondary {
